--- a/demo.html
+++ b/demo.html
@@ -3,10 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>demo</title>
+	<script type="text/javascript" src ="">
+		window.onload = function () {
+			alert('demo');
+		}  	
+	</script>
 </head>
 <body>
 	<p>
 		this is a demo.
-	</p>
+	<p>
 </body>
 </html>
