--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>demo</title>
+	<style type="text/css">
+	</style>
 	<script type="text/javascript" src ="">
 		window.onload = function () {
 			alert('demo');
