--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>demo</title>
 	<style type="text/css">
+		p {
+			color: #f00;
+		}
 	</style>
 	<script type="text/javascript" src ="">
 		window.onload = function () {
