--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 			color: #f00;
 		}
 	</style>
-	<script type="text/javascript" src ="">
+	<script type="text/javascript">
 		window.onload = function () {
 			alert('demo');
 		}  	
