--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>demo</title>
-
+	<style type="text/javascript">
+		div, ul, li {
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 </head>
 <body>
 	<p>
