--- a/demo.html
+++ b/demo.html
@@ -11,8 +11,10 @@
 	</style>
 </head>
 <body>
-	<p>
-		this is a demo.
-	</p>
+	<div class="wrapper">
+		<p>
+			this is a demo.
+		</p>
+	</div>
 </body>
 </html>
